k8s/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: data-ingestion
#   labels:
#     app.kubernetes.io/name: data-ingestion
#     app.kubernetes.io/part-of: upsure
# spec:
#   type: ClusterIP
#   selector:
#     app.kubernetes.io/name: data-ingestion
#   ports:
#     - name: http
#       port: 80
#       targetPort: http
#       protocol: TCP

apiVersion: v1
kind: Service
metadata:
  name: data-ingestion
  namespace: staging
  labels:
    app: data-ingestion
spec:
  selector:
    app: data-ingestion
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
